# Nurtura

./: .env.local  .gitignore  ACCURACY_FAQ.md  AGE_DETECTION.md  Dockerfile  ENHANCED_TRACKING.md  GITHUB_SETUP.md  HOW_IT_WORKS.md  INSTALL.md  MACOS_CAMERA_PERMISSIONS.md  PYTHON_VERSION_FIX.md  QUICKSTART.md  README.md  RPPG_HEART_RATE.md  TEST_WITH_VIDEO.md  VERSION_COMPARISON.md  activate.sh  analyze_infant_video.py  analyze_video_research.py  best.ipynb  breathing_monitor.py  breathing_monitor_advanced.py  breathing_monitor_graphical.py  breathing_monitor_research.py  breathing_monitor_video.py  config.py  config_template.py  diagnose_snowflake.py  flag_vitals_algorithm.py  live_kit.py  main.py  main_gradio.py  main_streamlit.py  push_to_github.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  (+6 more)
archive/docs/: ENHANCED_VERSION.md  GRAPHICAL_VERSION.md  SUMMARY.md  VISUAL_EXAMPLE.txt  download_test_video.sh
archive/old_versions/: breathing_monitor.py  breathing_monitor_enhanced.py  breathing_monitor_graphical.py  config_raspberry_pi.py
test_videos/: 007.webm
